[package]
edition = "2021"
name = "rmb-sdk"
version = "0.1.0"
readme = "README.md"
description = "sdk toolkit for builing rmb services and clients"

[workspace]
members = [
    "handler",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
async-stream = "0.3.3"
async-trait = "0.1.53"
base64 = "0.13.0"
bb8-redis = "0.11.0"
futures = "0.3.21"
log = "0.4"
serde = {version = "1.0.136", features = ["derive"]}
serde_json = {version = "1.0.81"}
tokio = {version = "1", features = ["full"]}
uuid = {version = "1.1.0", features = ["v4"]}
workers = {git = "https://github.com/threefoldtech/tokio-worker-pool", branch = "main"}
thiserror = "1.0"
handler = { path="handler" }

[dev-dependencies]
